--- a/src/options.html
+++ b/src/options.html
@@ -6,8 +6,15 @@
 </head>
 
 <body>
-  <label for="likelihood">Likelihood (1 = 100% of images):</label>
-  <input type="number" id="likelihood" name="likelihood" min="0" max="1" step="0.1" value="0">
+  <label for="bedtime">
+    Your get-off-the-computer time (the time when 100% of the images you see in your browser will be
+    yawns):
+  </label>
+  <input type="time" id="bedtime" name="bedtime">
+  <label for="lead-up">
+    How many minutes before then to start gradually showing yawns
+  </label>
+  <input type="number" id="lead-up" name="lead-up" min="0" max="120" step="15">
   <button id="save-btn">Save</button>
   <script src="options.js"></script>
 </body>
