Convert options.js to options.ts

--- a/src/options.html
+++ b/src/options.html
@@ -16,7 +16,7 @@
   </label>
   <input type="number" id="lead-up" name="lead-up" min="0" max="120" step="15">
   <button id="save-btn">Save</button>
-  <script src="options.js"></script>
+  <script src="options.ts"></script>
 </body>
 
 </html>
